@@ -1,5 +1,5 @@
 #
-#  $Id: README,v 1.4 2003/11/12 22:34:49 salnikov Exp $
+#  $Id$
 #
 
 Package coordinator: Andy Salnikov <salnikov@slac.stanford.edu>
