@@ -1,6 +1,6 @@
 //--------------------------------------------------------------------------
 // File and Version Information:
-// 	$Id: AppCmdOpt.cc,v 1.3 2004/08/24 17:04:23 salnikov Exp $
+// 	$Id$
 //
 // Description:
 //	Implementation of methods for a Templated class.
