@@ -63,7 +63,7 @@ extern "C" {
  *  @see AppCmdOptIncr
  *  @see AppCmdOptToggle
  *
- *  @version $Id: AppCmdOptBase.hh,v 1.3 2004/08/24 17:04:23 salnikov Exp $
+ *  @version $Id$
  *
  *  @author Andy Salnikov	(originator)
  */
