@@ -1,6 +1,6 @@
 //--------------------------------------------------------------------------
 // File and Version Information:
-// 	$Id: AppCmdOptList.cc,v 1.5 2004/09/18 22:40:04 salnikov Exp $
+// 	$Id$
 //
 // Description:
 //	Implementation of methods for a Templated class.
