@@ -1,6 +1,6 @@
 //--------------------------------------------------------------------------
 // File and Version Information:
-// 	$Id: AppCmdOptNamedValue.cc,v 1.2 2007/01/15 22:31:17 desilva Exp $
+// 	$Id$
 //
 // Description:
 //	Implementation of methods for a Templated class.
